src/objects/Cash_Drawer_Reconciliation__c.object
<CustomObject>
    <fields>
        <fullName>Cash_Drawer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Drawer</label>
        <referenceTo>Cash_Drawer__c</referenceTo>
        <relationshipLabel>Cash Drawer Reconciliations</relationshipLabel>
        <relationshipName>Cash_Drawer_Reconciliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cash_Reconciliation__c</fullName>
        <label>Cash Reconciliation</label>
        <referenceTo>Cash_Reconciliation__c</referenceTo>
        <relationshipLabel>Cash Drawer Reconciliations</relationshipLabel>
        <relationshipName>Cash_Drawer_Reconciliations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cash_Drawer_Reconciliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unreconciled</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Reconciled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Cash Drawer Reconciliation</label>
    <nameField>
        <displayFormat>CDR-{000000}</displayFormat>
        <label>Cash Drawer Reconciliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cash Drawer Reconciliations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>